/songs [delete] Удаление песни из библиотеки по ID и /songs/lyrics [get] Получение текста песни с пагинацией по куплетам
